MTA/pod_spark.yaml
---
  apiVersion: v1
  kind: Pod
  metadata:
    name: spark
    labels:
      app: spark
  spec:
    containers:
      - name: spark
        image: heleonu/cluster-apache-spark
        command: ["/bin/bash", "-c", "while true; do echo 1; sleep 1; done"]
      - name: kube-proxy-sidecar
        image: bitnami/kubectl
        command: ["kubectl", "proxy"]
        ports:
          - containerPort: 8001
