MTA/spark-pod.yaml
---
  apiVersion: v1
  kind: Pod
  metadata:
    name: spark-pod
    namespace: default
    labels:
      app: spark-pod
  spec:
    containers:
      - name: spark-container
        image: heleonu/spark-pod:1
        command: ["bash", "-c", "while true; do echo 1; sleep 1; done"]
        ports:
          - containerPort: 7077
          - containerPort: 8080
      #- name: kube-proxy-sidecar
        #image: bitnami/kubectl
        #command: ["kubectl", "proxy"]
        #ports:
          #- containerPort: 8001
