MTA/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  labels:
    app: spark-pod
spec:
  type: ClusterIP
  selector:
    app: spark-pod
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
