MTA/spark-headless-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: headless-spark
spec:
  clusterIP: None
  selector:
    app: spark-pod
  ports:
    - name: driver
      protocol: TCP
      port: 2222
      targetPort: 2222
    - name: blockmanager
      protocol: TCP
      port: 7777
      targetPort: 7777
